<resources>
    <string name="app_name">Parking time</string>
    <string name="insert_values_to_start">Insert values to start</string>
    <string name="welcome">Welcome!</string>
    <string name="auto">A</string>
    <string name="manual">M</string>
    <string name="parking_duration_00_00">parking duration</string>
    <string name="confirm">Confirm</string>
    <string name="take_a_photo">Click \"Capture\" to take a photo</string>
    <string name="capture">Capture</string>
    <string name="delete">Delete</string>
    <string name="arrival">Time of arrival:</string>
    <string name="expiring">"Expires in "</string>
    <string name="countdown_finished_text">Parking timer has ended, go to your car!</string>
    <string name="camera_permission">camera not permitted, change settings</string>
    <string name="wrong_format">wrong format, use 00:00</string>
    <string name="location_permission">location not permitted, change settings</string>
    <string name="get_direction">Click the icon below to get directions</string>
    <string name="timer_title">Parking timer</string>
    <string name="timer_running">The timer is running...</string>
    <string name="timer_ended_title">Timer finished!</string>
    <string name="timer_ended">The parking timer has finished, go to your car!</string>
    <string name="timer_warning_title">Warning! Timer is ending..</string>
    <string name="timer_warning_message">Less than 10 minutes remaining</string>
    <string name="current_location_not_initialized">Location not found, check connection or permission</string>
    <string name="generic_error">something went wrong, retry</string>
</resources>