<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorPrimary"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:contentDescription="image"
        android:src="@drawable/parking_1641"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_very_very_small"
        android:paddingHorizontal="@dimen/padding_mid"
        android:text="@string/insert_values_to_start"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/font_size_mid_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/manualEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingStart="@dimen/margin_small"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/font_size_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/manualEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_mid"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_very_very_small"
        android:background="@drawable/input_bg_disabled"
        android:ems="8"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="time"
        android:padding="@dimen/margin_very_small"
        android:paddingStart="@dimen/margin_small_mid"
        android:textColorHint="@color/disabled"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/switch1"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"

        android:layout_width="@dimen/width_big"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_very_very_small"
        android:layout_marginTop="@dimen/margin_mid_big"
        android:layout_marginEnd="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_small"
        android:textOff="@string/auto"
        android:textOn="@string/manual"
        android:thumb="@drawable/switch_thumb_custom"
        android:track="@drawable/switch_track_custom"
        app:layout_constraintBottom_toTopOf="@+id/durationEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manualEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:showText="true" />

    <EditText
        android:id="@+id/durationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_weight="1"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/parking_duration_00_00"
        android:inputType="time"
        android:padding="@dimen/margin_very_small"
        android:paddingStart="@dimen/margin_small_mid"
        android:textColorHint="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/manualTimeBt"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/manualEditText"
        app:layout_constraintTop_toBottomOf="@+id/manualEditText" />

    <Button
        android:id="@+id/manualTimeBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_very_small"
        android:layout_marginBottom="@dimen/margin_mid"
        android:layout_weight="1"
        android:backgroundTint="?attr/colorAccent"
        android:elevation="@dimen/padding_mid"
        android:text="@string/confirm"
        android:textColor="?attr/background"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/durationEditText"
        app:layout_constraintStart_toStartOf="@+id/durationEditText"
        app:layout_constraintTop_toBottomOf="@+id/durationEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>